[gd_scene load_steps=6 format=2]

[ext_resource path="res://Skripte/Schiff.gd" type="Script" id=1]
[ext_resource path="res://Texturen/Schiffe/3erSchiff-png.png" type="Texture" id=2]
[ext_resource path="res://Texturen/Schiffe/3er.png" type="Texture" id=3]
[ext_resource path="res://Audio/Schiffkaputt.wav" type="AudioStream" id=203]

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 1, 1 )

[node name="Schiff 3er" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
laenge = 3

[node name="Button" type="TouchScreenButton" parent="."]
position = Vector2( -72.0002, -20.4546 )
scale = Vector2( 0.344498, 0.323864 )
normal = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 0.137255 )
scale = Vector2( 0.359, 0.391 )
texture = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.346, 0.346 )
texture = ExtResource( 3 )

[node name="NurtippTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="KinematicBody2D" type="KinematicBody2D" parent="." groups=["Schiff"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
shape = SubResource( 5 )

[node name="Schiffkaputt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 203 )
bus = "Sound"

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="released" from="Button" to="." method="_on_Button_released"]
[connection signal="timeout" from="NurtippTimer" to="." method="_on_NurtippTimer_timeout"]
